# weavy

./: .gitignore  README.md  dataset_file.py  figma-data-dump.json  insert-pdf.py  insert.py  pdf_reader.py  pyproject.toml  rag.py  readpdf.py  search.py  todo.md  weaviate_uploader.py  xpdf.py
webapp/: server.py
webapp/static/: app.jsx  old_script.js  page.jsx  script.js
webapp/templates/: index.html  page.html
